# docwright

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
ai_docgen/: cli.py  engine.py  renderer.py
ai_docgen/built_in_templates/wiki/: api-contracts.md.j2  operations.md.j2
ai_docgen/outputs/: direct.py  factory.py  pull_request.py
ai_docgen/providers/: base.py  claude.py  factory.py  ollama.py  openai.py
ai_docgen/reporters/: html.py  terminal.py
docs/: OVERVIEW.md
docs/specs/: 2026-05-14-docs-agent-design.md
docs/superpowers/plans/: 2026-05-14-docs-agent.md
docs_agent/: analyzer.py  cli.py  config.py  engine.py  registry.py  scaffolder.py
docs_agent/built_in_templates/wiki/: adr.md.j2  architecture.md.j2  integrations.md.j2  security.md.j2
docs_agent/outputs/: direct.py  factory.py  pull_request.py
docs_agent/providers/: claude.py  factory.py  ollama.py  openai.py
docs_agent/reporters/: html.py  terminal.py
docwright/: cli.py  config.py  engine.py  scaffolder.py
docwright/built_in_templates/readme/: default.md.j2
docwright/built_in_templates/wiki/: data-model.md.j2  db-schema.md.j2  development-guide.md.j2  home.md.j2  troubleshooting.md.j2
docwright/outputs/: base.py  direct.py  factory.py  pull_request.py
docwright/providers/: claude.py  factory.py  ollama.py  openai.py
docwright/reporters/: html.py  terminal.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_engine.py  test_integration.py  test_outputs.py  test_providers.py  test_registry.py  test_renderer.py  test_scaffolder.py
