[tool.poetry]
name = "ai-docgen"
version = "0.1.0"
description = "AI-powered documentation agent: auto-generates and maintains README & wiki on every commit"
authors = ["Artem Gotlib <gotlib.artem.m@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GotlibArtem/ai-docgen"
repository = "https://github.com/GotlibArtem/ai-docgen"
keywords = ["documentation", "ai", "llm", "claude", "openai", "git", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
packages = [{include = "ai_docgen"}]

[tool.poetry.scripts]
ai-docgen = "ai_docgen.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
pydantic = "^2.0"
jinja2 = "^3.1"
httpx = "^0.27"
gitpython = "^3.1"
anthropic = "^0.28"
openai = "^1.30"
pyyaml = "^6.0"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
ruff = "^0.4"
mypy = "^1.10"
types-PyYAML = "^6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
